Fix alignment blok

--- a/wp/wp-content/themes/kijkinjewijk/css/style.css
+++ b/wp/wp-content/themes/kijkinjewijk/css/style.css
@@ -200,6 +200,7 @@ h3 {
 .news-items-wrapper {
   width: 450px;
   height: 100%;
+  margin-left: 90px;
   background: #eeeeee;
   pointer-events: all;
   padding: 10px;
