--- a/wp/wp-content/themes/kijkinjewijk/scss/newsitems.scss
+++ b/wp/wp-content/themes/kijkinjewijk/scss/newsitems.scss
@@ -25,6 +25,7 @@
 .news-items-wrapper {
   width: 450px;
   height: 100%;
+  margin-left: 90px;
   background: #eeeeee;
   pointer-events: all; 
   padding: 10px;
